--- a/styles.css
+++ b/styles.css
@@ -225,16 +225,21 @@ body {
 
 .additional-info {
   flex: 1 1 40%;
+  flex-direction: column;
+  justify-content: start;
 }
 
 .additional-info__education {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   margin-bottom: 20px;
 }
 
 .additional-info__education-header {
   color: var(--secondary-text-color);
   text-align: left;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .additional-info__education-university-durability {
